# idmangler-lib

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: encoding.rs  lib.rs  macros.rs
src/block/: anyblock.rs  craftedconsutypedata.rs  craftedgeartypedata.rs  craftedidentdata.rs  customconsutypedata.rs  customgeartypedata.rs  customidentdata.rs  damagedata.rs  defensedata.rs  durabilitydata.rs  effectsdata.rs  enddata.rs  functions.rs  identdata.rs  mod.rs  namedata.rs  powderdata.rs  requirementsdata.rs  rerolldata.rs  shinydata.rs  startdata.rs  typedata.rs  usesdata.rs
src/data_transformer/: customconsutypedata.rs  customgeartypedata.rs  customidentdata.rs  customtypedata.rs  damagedata.rs  defensedata.rs  durabilitydata.rs  effectsdata.rs  enddata.rs  identdata.rs  mod.rs  namedata.rs  powderdata.rs  requirementsdata.rs  rerolldata.rs  shinydata.rs  startdata.rs  typedata.rs  usesdata.rs
src/encoding/: anydata.rs  error.rs  mod.rs  string.rs  traits.rs  varint.rs
src/encoding/block/: customconsutypedata.rs  customgeartypedata.rs  customidentdata.rs  damagedata.rs  defensedata.rs  durabilitydata.rs  effectsdata.rs  mod.rs  (+10 more)
src/item/: crafteds.rs  error.rs  id_items.rs  mod.rs
src/types/: attackspeed.rs  classtype.rs  consumabletype.rs  damagetype.rs  effect.rs  element.rs  errors.rs  geartype.rs  itemtype.rs  mod.rs  powder.rs  skilltype.rs  stat.rs  transform.rs  version.rs
tests/: decode.rs  decode_item.rs  encode.rs  encode_item.rs  test.rs
tests/unit/: encoding.rs  identdata.rs  mod.rs  namedata.rs  powderdata.rs  startdata.rs  typedata.rs
