[package]
name = "idmangler-lib"
description = "Library for encoding and decoding Wynntils id strings"
authors = ["Zatzou"]
repository = "https://github.com/Zatzou/idmangler-lib"
readme = "readme.md"
license = "LGPL-3.0"
version = "0.5.1"
edition = "2021"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
